// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbsItem tests is a basic snapshot 1`] = `
<a
  aria-disabled="true"
  class="no-underline transition-colors duration-150 text-blue-1000 hover:text-blue-1000 active:text-blue-1000 dark:text-blue-200 dark:hover:text-blue-200 dark:active:text-blue-200  inline-flex text-200  "
  data-testid="test-breadcrumbs-item"
  href=""
  role="link"
>
  <span
    class=""
  >
    movies
  </span>
</a>
`;

exports[`BreadcrumbsItem tests is a snapshot with a truncationWidth of 100 1`] = `
<a
  aria-disabled="true"
  class="no-underline transition-colors duration-150 text-blue-1000 hover:text-blue-1000 active:text-blue-1000 dark:text-blue-200 dark:hover:text-blue-200 dark:active:text-blue-200  inline-flex text-200  "
  data-testid="test-breadcrumbs-item"
  href=""
  role="link"
  style="max-width: 100px;"
>
  <span
    class="truncate"
  >
    movies
  </span>
</a>
`;

exports[`BreadcrumbsItem tests is a snapshot with isLastItem equal to true 1`] = `
<a
  aria-current="page"
  aria-disabled="true"
  class="no-underline transition-colors duration-150 text-blue-1000 hover:text-blue-1000 active:text-blue-1000 dark:text-blue-200 dark:hover:text-blue-200 dark:active:text-blue-200  inline-flex text-200 pointer-events-none "
  data-testid="test-breadcrumbs-item"
  href=""
  role="link"
>
  <span
    class=""
  >
    movies
  </span>
</a>
`;
